<resources>
	<string name="hello">Hello World, GroupAgendasActivity!</string>
	<string name="app_name">GroupAgendas</string>
	<string name="groupagenda">Groupagenda</string>
	<string name="email_address">E-mail address</string>
	<string name="password">Password</string>
	<string name="login">Log in</string>
	<string name="stay_logged_in">Stay logged in</string>
	<string name="contacts">Contacts</string>
	<string name="contact">Contact</string>
	<string name="groups">Groups</string>
	<string name="yes">Yes</string>
	<string name="no">No</string>
	<string name="maybe">Maybe</string>
	<string name="all">All</string>
	<string name="loading">Loading…</string>
	<string name="select_action">Select action</string>
	<string name="delete">Delete</string>
	<string name="edit">Edit</string>
	<string name="sure_delete">Are you sure you want to delete?</string>
	<string name="contact_is_not_deleted">Error! Contact is not deleted</string>
	<string name="group_is_not_deleted">Error! Group is not deleted</string>
	<string name="Add_to_contact">Add to contact</string>
	<string name="contact_deleted">Contact has been deleted successfully</string>
	<string name="group_deleted">Group has been deleted successfully</string>
	<string name="event_deleted">Event has been deleted successfully</string>
	<string name="firstname">Firstname</string>
	<string name="lastname">Lastname</string>
	<string name="email">Email</string>
	<string name="birthday">Birthday</string>
	<string name="city">City</string>
	<string name="get_contacts">Get contacts list…</string>
	<string name="get_groups">Getting groups list…</string>
	<string name="phone">Phone</string>
	<string name="country">Country</string>
	<string name="street">Street</string>
	<string name="zip">ZIP code</string>
	<string name="name">Name</string>
	<string name="replace_image">Replace image</string>
	<string name="remove_image">Remove image</string>
	<string name="save">Save</string>
	<string name="saving">Saving…</string>
	<string name="ok">OK</string>
	<string name="update_group">Updating group…</string>
	<string name="update_contact">Updating contact…</string>
	<string name="get_group">Getting group %1$s</string>
	<string name="group_successfully_updated">Group successfully updated</string>
	<string name="take_from_camera">Take from camera</string>
	<string name="select_from_gallery">Select from gallery</string>
	<string name="select_image">Select Image</string>
	<string name="complete_action_using">Complete action using</string>
	<string name="can_not_find_image_crop_app">Can not find image crop app</string>
	<string name="choose_crop_app">Choose Crop App</string>
	<string name="contacts_">Contacts</string>
	<string name="choose">Choose</string>
	<string name="choose_contacts">Choose contacts</string>
	<string name="add_group">Add group</string>
	<string name="add_contact">Add contact</string>
	<string name="create_group">Create a group</string>
	<string name="create_contact">Create a contact</string>
	<string name="get_contact">Get contact %1$s</string>
	<string name="groups_">Groups</string>
	<string name="edit_contact">Edit Contact</string>
	<string name="delete_contact">Delete Contact</string>
	<string name="edit_group">Edit Group</string>
	<string name="delete_group">Delete Group</string>
	<string name="visibility">Visibility</string>
	<string name="get_events">Get events</string>
	<string name="you">You</string>
	<string name="created_by">Created by </string>
	<string name="search">Search…</string>
	<string name="events">Events</string>
	<string name="event">Event</string>
	<string name="chats">Chats</string>
	<string name="settings">Settings</string>
	<string name="logout">Logout</string>
	<string name="my_account">My account</string>
	<string name="calendar_settings">Calendar settings</string>
	<string name="auto_color">Auto color</string>
	<string name="auto_icon">Auto icon</string>
	<string name="more_emails">Connect more emails</string>
	<string name="whats_new">Whats new</string>
	<string name="provide_feedback">Provide Feedback</string>
	<string name="write_review">Write review</string>
	<string name="phone1">Phone #1</string>
	<string name="plus">+</string>
	<string name="phone2">Phone #2</string>
	<string name="phone3">Phone #3</string>
	<string name="sex">Gender</string>
	<string name="timezone">Timezone</string>
	<string name="title">Title</string>
	<string name="choose_icon">Choose icon</string>
	<string name="choose_color">Choose color</string>
	<string name="start_time">Start time</string>
	<string name="end_time">End time</string>
	<string name="date">Date</string>
	<string name="time">Time</string>
	<string name="desc">Description</string>
	<string name="address">Address »</string>
	<string name="details">Details »</string>
	<string name="set_reminder">Set reminder »</string>
	<string name="alarm">Alarm</string>
	<string name="reminder">Reminder</string>
	<string name="repeat">Repeat</string>
	<string name="location">Location</string>
	<string name="go_by">Go by</string>
	<string name="take_with_you">Take with you</string>
	<string name="cost">Cost</string>
	<string name="accomodation">Accommodation</string>
	<string name="invite_people">Invite people</string>
	<string name="copy_event">Copy event</string>
	<string name="loading_data">Loading data…</string>
	<string name="loading_account">Loading Account info…</string>
	<string name="loading_contacts">Loading Contacts…</string>
	<string name="loading_groups">Loading Groups…</string>
	<string name="loading_events">Loading Events…</string>
	<string name="loading_chat">Loading chat messages…</string>
	<string name="loading_templates">Loading Event templates…</string>
	<string name="loading_complete">Loading complete</string>
	<string name="title_is_required">Title is required</string>
	<string name="invalid_start_end_time">Event end time must be later than start time</string>
	<string name="name_is_required">Name is required</string>
	<string name="unknown_event_error">Event error unknown</string>
	<string name="desc_is_required">Description is required</string>
	<string name="new_event">New event</string>
	<string name="type">Type</string>
	<string name="select_contacts">Select contacts</string>
	<string name="delete_event">Delete event</string>
	<string name="register">Register</string>
	<string name="registration">Registration</string>
	<string name="language">Language</string>
	<string name="confirm">Confirm password</string>
	<string name="field_is_required">The %1$s field is required</string>
	<string name="invalid_email">The E-mail %1$s field must contain a valid email address.</string>
	<string name="invalid_confirm">The Confirm password field does not match the Password field.</string>
	<string name="error">Error!</string>
	<string name="need_activation">You have successfully registered. Check your email address to activate your account. If you do not receive the registration email, please check your spam folder</string>
	<string name="list_search">List &amp; search</string>
	<string name="go_to_date">Go to date</string>
	<string name="agenda">Agenda</string>
	<string name="mini_month">Month details</string>
	<string name="today">Today</string>
	<string name="year">Year</string>
	<string name="month">Month</string>
	<string name="week">Week</string>
	<string name="day">Day</string>
	<string name="send_mail">Send mail…</string>
	<string name="whats_new_text">Whats new text</string>
	<string name="emails">Emails</string>
	<string name="email1">Email 1</string>
	<string name="email2">Email 2</string>
	<string name="email3">Email 3</string>
	<string name="confirm_letter">After the changes you will receive a confirmation letter</string>
	<string name="use_am_pm">Use AM/PM time</string>
	<string name="use_am_pm_desc">Use this setting to enable or disable AM / PM - mode</string>
	<string name="default_view">Default agenda view</string>
	<string name="default_view_desc">Define standard agenda</string>
	<string name="date_format">Date format</string>
	<string name="date_format_desc">Define date format</string>
	<string name="keyword">Keyword</string>
	<string name="icon">Icon</string>
	<string name="add_auto_icon">Add auto icon</string>
	<string name="delete_auto_icon">Delete auto icon</string>
	<string name="color">Color</string>
	<string name="add_auto_color">Add auto color</string>
	<string name="delete_auto_color">Delete auto color</string>
	<string name="timezone_required">The Timezone field is required.</string>
	<string name="phone_code">International \ncalling code</string>
	<string name="show_calendar">Show calendar</string>
	<string name="native_calendars">Native calendars</string>
	<string name="select_calendars_to_display">Select calendars to display</string>
	<string name="no_color">No color</string>
	<string name="no_icon">No icon</string>
	<string name="title_desc">Title description</string>
	<string name="add_color">Add color</string>
	<string name="add_color_text">This color will be automatically be displayed based on the keywords mentioned in the title</string>
	<string name="add_icon_text">This icon will be automatically be displayed based on the keywords mentioned in the title</string>
	<string name="privacy_statement">Privacy statement</string>
	<string name="chk_statement"> I agree with\n privacy statement</string>
	<string name="forgot_pass">Forgot password</string>
	<string name="email_address_4_retrieve">Enter your email </string>
	<string name="get_code_2_retrieve_pass">Send Request</string>
	<string name="enter_email">Please enter your email address with which you have registered and an activation code will be send.\nEnter the code in the next screen and a new password can be created. </string>
	<string name="update_account_data">Updating Your account data</string>
	<string name="update_contacts_list">Updating Your contacts list</string>
	<string name="update_groups_list">Updating Your groups list</string>
	<string name="update_events_list">Updating Your events list</string>
	<string name="waiting_for_contacts_load">Loading contacts… wait</string>
	<string name="waiting_for_groups_load">Loading groups… wait</string>
	<string name="week_title">W</string>
	<string name="calendar_dayView_allDayEvents_holder">All day</string>
	<string name="calendar_dayView_navigateLeft">Navigate backwards</string>
	<string name="calendar_dayView_navigateRight">Navigate forward</string>
	<string name="registration_address_title_holder">Address</string>
	<string name="registration_address_zip_holder">ZIP</string>
	<string name="registration_address_street_holder">Street</string>
	<string name="registration_address_number_holder">Number</string>
	<string name="registration_address_city_holder">City</string>
	<string name="registration_error_val_too_short">Following value\'s too short :</string>
	<string name="registration_error_val_wrong_type">Following value\'s wrong type :</string>
	<string name="contact_import_button_from_phone">Import phone\'s contacts</string>
	<string name="contact_import_button_from_google_a">Authenticate Google Account</string>
	<string name="contact_import_button_from_google_i">Import from Gmail</string>
	<string name="contact_import_button">Import</string>
	<string name="contact_import_button_clear_auth">Clear credentials</string>
	<string name="contact_import_dialog_welcome_message">Welcome to contact import. Please choose following task:</string>
	<string name="login_ga_logo_placeholder">GroupAgendas logo</string>
	<string name="show_native_calendars">Show native calendar</string>
	<string name="show_ga_calendars">Show GroupAgendas calendar</string>
	<string name="calendars">Calendars</string>
	<string name="none">None</string>
	<string name="daily">Daily</string>
	<string name="weekly">Weekly</string>
	<string name="monthly">Monthly</string>
	<string name="yearly">Yearly</string>
	<string name="repeat_explained">To repeat an event every 2 weeks, select \'Weekly\' and set \'Repeat every\' to \'2 weeks\'.</string>
</resources>