<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:background="@android:color/white"
	android:orientation="vertical" >

	<RelativeLayout
		android:id="@+id/topBar"
		android:layout_width="fill_parent"
		android:layout_height="50dp"
		android:background="@drawable/top_bar_background" >

		<TextView
			android:id="@+id/topText"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_centerInParent="true"
			android:text="@string/my_account"
			android:textColor="@android:color/white"
			android:textSize="20dp"
			android:textStyle="bold" />

		<ProgressBar
			android:id="@+id/progress"
			style="@android:style/Widget.ProgressBar.Small"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentRight="true"
			android:layout_centerInParent="true"
			android:layout_marginRight="20dp"
			android:visibility="gone" />
	</RelativeLayout>

	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:focusableInTouchMode="true"
		android:orientation="vertical"
		android:padding="10dp" >

		<TextView
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="10dp"
			android:text="@string/email1"
			android:textColor="@android:color/black"
			android:textStyle="bold" />

		<EditText
			android:id="@+id/email1"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:hint="@string/email"
			android:inputType="textEmailAddress" />

		<TextView
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="10dp"
			android:text="@string/email2"
			android:textColor="@android:color/black"
			android:textStyle="bold" />

		<EditText
			android:id="@+id/email2"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:hint="@string/email"
			android:inputType="textEmailAddress" />

		<TextView
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="10dp"
			android:text="@string/email3"
			android:textColor="@android:color/black"
			android:textStyle="bold" />

		<EditText
			android:id="@+id/email3"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:hint="@string/email"
			android:inputType="textEmailAddress" />

		<TextView
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_margin="10dp"
			android:gravity="center"
			android:text="@string/confirm_letter"
			android:textColor="@android:color/black" />

		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:gravity="center_horizontal" >

			<Button
				android:id="@+id/save"
				android:layout_width="100dp"
				android:layout_height="wrap_content"
				android:text="@string/save" />
		</LinearLayout>
	</LinearLayout>

</LinearLayout>