<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="10dp"
    android:gravity="center_horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >
    <Button
        android:id="@+id/button_repeat_never"
        android:background="@drawable/event_invite_people_button_standalone"
        android:onClick="onClick"
        android:text="@string/none"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="18sp"
        android:padding="10dp"
        android:layout_gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp" />
    
    <Button
        android:id="@+id/button_repeat_daily"
        android:background="@drawable/event_invite_people_button_notalone"
        android:onClick="onClick"
        android:text="@string/daily"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="18sp"
        android:padding="10dp"
        android:layout_gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    
    <Button
        android:id="@+id/button_repeat_weekly"
        android:background="@drawable/event_invited_entry_notalone_background"
        android:onClick="onClick"
        android:text="@string/weekly"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="18sp"
        android:padding="10dp"
        android:layout_gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    
    <Button
        android:id="@+id/button_repeat_monthly"
        android:background="@drawable/event_invited_entry_notalone_background"
        android:onClick="onClick"
        android:text="@string/monthly"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="18sp"
        android:padding="10dp"
        android:layout_gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    
    <Button
        android:id="@+id/button_repeat_yearly"
        android:background="@drawable/event_invited_entry_last_background"
        android:onClick="onClick"
        android:text="@string/yearly"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="18sp"
        android:padding="10dp"
        android:layout_gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp" />
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/repeat_explained"
        android:textColor="@color/darker_gray" />
</LinearLayout>