<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white" >

    <RelativeLayout
        android:id="@+id/topBar"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:background="@drawable/top_bar_background" >

        <TextView
            android:id="@+id/topText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/calendars"
            android:textColor="@android:color/white"
            android:textSize="20dp"
            android:textStyle="bold" />

    </RelativeLayout>

    <ImageView android:contentDescription="@string/login_ga_logo_placeholder"
        android:id="@+id/logo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/topBar"
        android:clickable="true"
        android:src="@drawable/ga_logo" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo"
        android:layout_marginLeft="10dp"
        android:orientation="vertical"
        android:layout_marginRight="10dp" >
        
        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="@color/lighter_blue"
            android:textStyle="bold"
            android:text="@string/groupagenda"/>
        
        <Button
            android:id="@+id/ga_event_switch"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:padding="10dp"
            android:gravity="left|center_vertical"
            android:background="@drawable/event_invite_people_button_standalone"
            android:text="@string/show_ga_calendars"
            android:textColor="@color/black"
            android:textSize="16dp"
            android:textStyle="bold" />
        
        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="@color/lighter_blue"
            android:textStyle="bold"
            android:text="@string/native_calendars"/>
        
        <Button
            android:id="@+id/native_event_switch"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:padding="10dp"
            android:gravity="left|center_vertical"
            android:background="@drawable/event_invite_people_button_standalone"
            android:text="@string/show_native_calendars"
            android:textColor="@color/black"
            android:textSize="16dp"
            android:textStyle="bold" />
        
    </LinearLayout>

</RelativeLayout>